--- a/assignments/loading/waiting.css
+++ b/assignments/loading/waiting.css
@@ -1,7 +1,7 @@
 .circle {
     width: 200px;
     height: 200px;
-    border: 2em solid rgb(78, 20, 70);
+    border: 2em solid transparent;
     border-radius: 50%;
     position: absolute;
     top: 35%;
