--- a/assignments/responsive-gallery/style.css
+++ b/assignments/responsive-gallery/style.css
@@ -21,6 +21,7 @@
     display: grid;
     height:100vh;
     grid-template-columns: 1fr 1fr 1fr ;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
     gap: .5em;
     margin-left: 37px;
     margin-right: 37px;
