--- a/assignments/final/style.css
+++ b/assignments/final/style.css
@@ -5,7 +5,7 @@ header{
     gap: 20rem;
     align-items: center;
 
-    background: #4b4a4a;
+    background: grey;
  color: rgb(243, 243, 243);
    
     height: 50px;
